--- a/ShoppingSite/Views/Product/AddProduct.cshtml
+++ b/ShoppingSite/Views/Product/AddProduct.cshtml
@@ -11,38 +11,8 @@
         title = "Update Product";
         buttonText = "Update";
     }
+    var categories = ViewBag.Categories as List<Shopping.Entity.Models.Category>;
 }
-@*@Html.Action("CategoryList", "Product")
-    <a href="/Product/AddCategory" class="btn btn-primary">Add Category</a>
-    <br />
-    <br />
-    <br />
-    <h2>Add Product</h2>
-    <br />
-    <form method="post" action="/Product/AddProduct">
-        <div class="mb-3">
-            <label class="form-label">Product Name</label>
-            <input type="text" class="form-control" name="Name" value="">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Barcode</label>
-            <input type="text" class="form-control" name="Barcode" value="">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Stock Count</label>
-            <input type="number" class="form-control" name="Stock" value="">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Price</label>
-            <input type="text" class="form-control" name="Price" value="">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Category ID</label>
-            <input type="number" class="form-control" name="CategoryId" value="">
-        </div>
-        <button type="submit" class="btn btn-primary">Add Product</button>
-    </form>
-    <br />*@
 <h2>Add Product</h2>
 <br />
 <div class="row justify-content-center">
@@ -52,31 +22,46 @@
                 <i class="fa-solid fa-plus"></i> @title
             </div>
             <div class="card-body">
-                @using (Html.BeginForm("AddProduct", "Product", FormMethod.Post))
-                {
-                    @Html.AntiForgeryToken()
+                <form method="post" action="/Product/AddProduct">
+                    @if (Model != null)
+                    {
+                        <input type="hidden" class="form-control" name="Id" value="@Model.Id">
+                    }
                     <div class="mb-3">
-                        @Html.LabelFor(x => x.Name, "Product Name")
-                        @Html.TextBoxFor(x => x.Name, new { @class = "form-control mb-3" })
+                        <label class="form-label">Product Name</label>
+                        <input type="text" class="form-control form-control-sm" name="Name" value="@(Model != null ? Model.Name : "")">
                     </div>
+
                     <div class="mb-3">
-                        @Html.LabelFor(x => x.Barcode, "Product Barcode")
-                        @Html.TextBoxFor(x => x.Barcode, new { @class = "form-control mb-3" })
+                        <label class="form-label">Barcode</label>
+                        <input type="text" class="form-control form-control-sm" name="Barcode" value="@(Model != null ? Model.Barcode : "")">
                     </div>
+
                     <div class="mb-3">
-                        @Html.LabelFor(x => x.Stock, "Stock Count")
-                        @Html.TextBoxFor(x => x.Stock, new { @class = "form-control mb-3" })
+                        <label class="form-label">Stock</label>
+                        <input type="number" class="form-control form-control-sm" name="Stock" value="@(Model != null ? Model.Stock.ToString() : "")">
                     </div>
+
                     <div class="mb-3">
-                        @Html.LabelFor(x => x.Price, "Price")
-                        @Html.TextBoxFor(x => x.Price, new { @class = "form-control mb-3" })
+                        <label class="form-label">Price</label>
+                        <input type="text" class="form-control form-control-sm" name="Price" value="@(Model != null ? Model.Price.ToString() : "")">
                     </div>
+
                     <div class="mb-3">
-                        @Html.LabelFor(x => x.CategoryId, "Category")
-                        @Html.DropDownListFor(x => x.CategoryId, new SelectList(ViewBag.Categories, "Id", "Name"), new { @class = "form-control mb-3" })
+                        <label class="form-label">Select Category</label>
+                        <select class="form-control" name="CategoryId">
+                            @foreach(var category in categories) 
+                            { 
+                            <option @(Model != null && category.Id == Model.CategoryId ? "selected" : "") value="@category.Id">@category.Name</option>
+                            }
+                        </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">@buttonText</button>
-                }
+
+                    <button class="btn btn-primary" type="submit">
+                        @buttonText
+                    </button>
+
+                </form>
             </div>
         </div>
     </div>
