--- a/ShoppingSite/Views/User/Add.cshtml
+++ b/ShoppingSite/Views/User/Add.cshtml
@@ -36,11 +36,16 @@
                     <div class="mb-3">
                         <label class="form-label">Username</label>
                         <input type="text" class="form-control form-control-sm" name="Username" value="@(Model != null ? Model.Username : "")">
+                        @if (ViewData.ModelState["Username"]?.Errors.Count > 0)
+                        {
+                            <span class="text-danger">@ViewData.ModelState["Username"].Errors[0].ErrorMessage</span>
+                        }
+                        
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Password</label>
-                        <input type="text" class="form-control form-control-sm" id="UserInputId" name="UserPassword">
+                        <input type="text" class="form-control form-control-sm" id="UserInputId" name="Password">
                     </div>
 
                     <div class="mb-3">
